--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 .App {
   text-align: center;
+  background-color: white;  
+  border: 5px solid red;    
+  width: 100vw;              
+  height: 100vh;           
+    box-sizing: border-box; 
 }
+
+body {
+  margin: 50;
+  padding: 100;
+}
+
+
 
 .App-logo {
   height: 40vmin;
