--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
 .App {
   text-align: center;
-  background-color: white;  
-  border: 5px solid red;    
-  width: 100vw;              
-  height: 100vh;           
-    box-sizing: border-box; 
+  background-color: white;
+  border: 1px solid red;
+  max-width: 50px;
+  margin: auto;
+  height: 100px;
+  width: 100px;
+  box-sizing: border-box;
 }
 
-body {
-  margin: 50;
-  padding: 100;
+  height: 100;
 }
-
-
+html {
+  height: 100;
+  width: 100;
+}
 
 .App-logo {
   height: 40vmin;
