--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,19 @@
 .App {
   text-align: center;
+}
+
+.header {
   background-color: white;
-  border: 1px solid red;
-  max-width: 50px;
-  margin: auto;
-  height: 100px;
-  width: 100px;
-  box-sizing: border-box;
+  border: 2px solid red;
+  padding: 20px;
 }
 
-  height: 100;
-}
-html {
-  height: 100;
-  width: 100;
+.main {
+  margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  background-color: white;
+  border: 2px solid red;
+  padding: 20px;
 }
