--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,14 @@
 
 .header {
   background-color: white;
-  border: 2px solid red;
+  border: 2px solid rgb(189, 226, 229);
   padding: 20px;
 }
 
 .main {
   margin: 20px;
+  border: 2px solid rgb(189, 226, 229);
+  padding: 20px;
 }
 
 .footer {
@@ -40,7 +42,7 @@ body {
 
 .App {
   max-width: 600px;
-  border:1px solid red;
+  border:5px solid rgb(85, 26, 236);
   margin: 0 auto;
   background-color: #fff;
   border-radius: 8px;
